# vendas-de-produtos-pyspark

./: .dockerignore  Dockerfile  README.md  pyproject.toml  pyspark-basico.py
app/: app.py
src/: loaddata.py  test.py
