[tool.poetry]
name = "vendas-de-produtos-pyspark"
version = "0.1.0"
description = ""
authors = ["Paco <pacodeoliveirasaavedra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.5.3"
kagglehub = "^0.3.3"
pandas = "^2.2.3"
streamlit = "^1.40.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
